fix collapses map on about page

--- a/src/style/layout/footer.scss
+++ b/src/style/layout/footer.scss
@@ -2,9 +2,14 @@
 @import '../mixins.scss';
 
 footer {
+  position: relative;
+  bottom: 0px;
+  left: 0px;
+
   width: 100%;
-  height: 209px;
-  margin-top: -1%;
+  height: $footer-height;
+  min-height: $footer-height;
+  margin-bottom: 0%;
   background-color: black;
 
   display: flex;
@@ -12,29 +17,29 @@ footer {
   justify-content: center;
   align-items: center;
   text-align: center;
-  
+
   @include h2_mixin(white, desktop);
-  .footer__logo--mobile{
+  .footer__logo--mobile {
     display: none;
   }
-  & p{
+  & p {
     padding-top: 1%;
     text-align: center;
   }
-  @media screen and (max-width: 767px){
-    .footer__logo--mobile{
+  @media screen and (max-width: 767px) {
+    .footer__logo--mobile {
       display: flex;
     }
-    .footer__logo--desktop{
+    .footer__logo--desktop {
       display: none;
     }
-    & div{
+    & div {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
-    & p{
+    & p {
       font-size: 12px;
       line-height: 17.11px;
       text-align: center;
