--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,6 +3,7 @@ $white-color: white;
 $black-color: black;
 $primary-font-family: 'Montserrat', sans-serif;
 
+$footer-height: 209px;
 $main_margin--desktop: 1% 9%;
 $main_margin--max950px: 1% 7%;
 $main_margin--max800px:1% 5%;
